# Arch-Explainer

./: .gitignore  output.txt
backend/: diagnose_db.py  docker-compose.yml  pyproject.toml
backend/.cache/: embeddings.db  summaries.db
backend/docs-output/: index.md
backend/docs-output/diagrams/: architecture.md  calls_all.md  calls_diagram.md  calls_index.md  calls_ingest.md  calls_publish.md  calls_scripts.md  calls_tests.md  calls_understand.md  classes_all.md  classes_arch_explainer.md  classes_index.md  classes_ingest.md  classes_publish.md  classes_tests.md  classes_understand.md  dependencies.md  sequence_run_pipeline.md
backend/docs-output/modules/: api.md  arch-explainer-models.md  arch-explainer.md  diagram.md  github-app.md  index.md  ingest-parser.md  ingest.md  publish.md  root.md  scripts.md  tests.md  understand.md
backend/scripts/: migrate_vector_dimensions.py  run_pipeline.py
backend/src/arch_explainer/: models.py
backend/src/arch_explainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/arch_explainer/diagram/: generator.py
backend/src/arch_explainer/index/: embedder.py  store.py
backend/src/arch_explainer/ingest/: graph_extractor.py  parser.py
backend/src/arch_explainer/publish/: render_images.py  writer.py
backend/src/arch_explainer/understand/: summarizer.py
backend/tests/: test_diagram.py  test_embedder.py  test_parser.py  test_run_pipeline.py  test_store.py  test_store_integration.py  test_summarizer.py  test_writer.py
