[project]
name = "arch-explainer"
version = "0.1.0"
description = "Connects to a repo, understands the codebase, and generates architecture docs + diagrams automatically."
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "google-generativeai>=0.5",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "pygithub>=2.3",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]